[package]
name = "dscfg-cached_file_storage"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Storage implementation for dynamic shared configuration"
homepage = "https://github.com/Kixunil/dscfg"
repository = "https://github.com/Kixunil/dscfg"
readme = "README.md"
keywords = ["configuration", "shared", "ipc", "protocol"]
categories = ["config", "network-programming"]
license = "MITNFA"
maintenance = { status = "passively-maintained" }

[dependencies]
serde_json = "1"
void = "1"
dscfg-server = "0.1"
