[package]
name = "dscfg-client"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Client side implementation of dynamic shared configuration"
homepage = "https://github.com/Kixunil/dscfg"
repository = "https://github.com/Kixunil/dscfg"
readme = "README.md"
keywords = ["configuration", "shared", "ipc", "protocol"]
categories = ["config", "network-programming"]
license = "MITNFA"
maintenance = { status = "passively-maintained" }

[dependencies]
dscfg-proto = { version = "0.1", features = ["client"] }
futures = "0.1"
tokio-io = "0.1"
serde = "1"
serde_json = "1"
