[package]
name = "dscfg-proto"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Protocol definition of dynamic shared configuration"
homepage = "https://github.com/Kixunil/dscfg"
repository = "https://github.com/Kixunil/dscfg"
readme = "README.md"
keywords = ["configuration", "shared", "ipc", "protocol"]
categories = ["config", "network-programming"]
license = "MITNFA"
maintenance = { status = "passively-maintained" }

[features]
default = []
client = []
server = []

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
