[package]
name = "dscfg-unix_server"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "Serves shared configuration over Unix socket"
build = "build.rs"

[dependencies]
dscfg-server = "0.1"
dscfg-cached_file_storage = "0.1"
serde_json = "1"
serde = "1"
void = "1"
tokio = "0.1"
slog = "2"
slog-term = "2.4"
configure_me = "0.3.1"

[build-dependencies]
configure_me_codegen = "0.3.1"
